--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
-    <string name="app_name">greidan</string>
+    <string name="app_name">Greiðan</string>
     <string name="action_settings">Settings</string>
+
+    <string name="handywork">Handverk</string>
+    <string name="rides">Skutl</string>
+    <string name="tools">Lán á tólum</string>
+    <string name="programming">Forritun</string>
+    <string name="other">Annað</string>
+    <string name="title_activity_ad_list">Auglýsingar</string>
+
+    <string name="search">Skoða</string>
+    <string name="post">Setja inn</string>
+    <string name="settings">Stillingar</string>
+    <string name="title_activity_new_ad">Ný auglýsing</string>
 </resources>
