--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,40 @@
     <string name="app_name">Greiðan</string>
     <string name="action_settings">Settings</string>
 
-    <string name="handywork">Handverk</string>
-    <string name="rides">Skutl</string>
-    <string name="tools">Lán á tólum</string>
-    <string name="programming">Forritun</string>
-    <string name="other">Annað</string>
-    <string name="title_activity_ad_list">Auglýsingar</string>
-
     <string name="search">Skoða</string>
     <string name="post">Setja inn</string>
     <string name="settings">Stillingar</string>
+
+    <string name="title_activity_ad_list">Auglýsingar</string>
     <string name="title_activity_new_ad">Ný auglýsing</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string-array name="sections">
+        <item >Handverk</item>
+        <item >Skutl</item>
+        <item >Lán á tólum</item>
+        <item >Forritun</item>
+        <item >Annað</item>
+    </string-array>
+
+    <string-array name="adlist_items">
+        <item >Fullt</item>
+        <item >af</item>
+        <item >augl</item>
+        <item >her</item>
+        <item >foo</item>
+        <item >foo</item>
+        <item >foo</item>
+        <item >foo</item>
+        <item >foo</item>
+        <item >bar</item>
+        <item >bar</item>
+        <item >bar</item>
+        <item >bar</item>
+        <item >bar</item>
+        <item >bar</item>
+        <item >bar</item>
+        <item >Danni</item>
+    </string-array>
+
 </resources>
