--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="post">Setja inn</string>
     <string name="settings">Stillingar</string>
 
-
     <string-array name="categories">
         <item>Handverk</item>
         <item>Skutl</item>
@@ -15,25 +14,6 @@
         <item>Annað</item>
     </string-array>
 
-    <!--<string-array name="adlist_items">-->
-    <!--<item>Fullt</item>-->
-    <!--<item>af</item>-->
-    <!--<item>augl</item>-->
-    <!--<item>her</item>-->
-    <!--<item>foo</item>-->
-    <!--<item>foo</item>-->
-    <!--<item>foo</item>-->
-    <!--<item>foo</item>-->
-    <!--<item>foo</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>bar</item>-->
-    <!--<item>Danni</item>-->
-    <!--</string-array>-->
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
@@ -52,7 +32,16 @@
     </string>
     <string name="button_register">Nýskráning</string>
     <string name="button_login">Innskráning</string>
+    <string name="action_register_link">Smelltu hér til að stofna aðgang</string>
 
+    <!-- Strings related to posting a new ad -->
+    <string name="prompt_ad_title">Titill</string>
+    <string name="prompt_ad_category">Flokkur</string>
+    <string name="prompt_ad_content">Efni</string>
+    <string name="action_ad_post">Setja inn</string>
+    <string name="action_ad_cancel">Hætta við</string>
+
+    <string name="action_logout">Log out</string>
 
     <string name="title_activity_ad_list">Auglýsingar</string>
     <string name="title_activity_new_ad">Ný auglýsing</string>
