--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Greiðan</string>
     <string name="action_settings">Settings</string>
 
+    <string name="host">http://10.0.2.2</string>
+    <string name="port">8080</string>
+
     <string name="search">Skoða</string>
     <string name="post">Setja inn</string>
     <string name="settings">Stillingar</string>
