--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,10 @@
     <string name="author">Höfundur: %1$s</string>
     <string name="time_posted_with_category">Sett inn þann %1$s í flokkinn %2$s</string>
 
+    <!-- Strings related to message view activity -->
+    <string name="message_author">Sendandi: %1$s</string>
+    <string name="time_message_sent">Sett inn þann %1$s í flokkinn %2$s</string>
+
     <!-- Strings related to user profile activity -->
     <string name="member_since">Meðlimur síðan %1$s</string>
     <string name="user_rating">Einkunn: %1$.1f</string>
